Muudatud andmekogu nimi rakenduse ehitamise käigus muudetavaks.